# bilibli-toolkit

./: .gitignore  README.md
bilibliToolkit/: .gitignore  README.md  pyproject.toml  requirements.txt
bilibliToolkit/scripts/: categorize.py  convert.py  download_watchlater.py  scan.py
bilibliToolkit/src/: __init__.py
bilibliToolkit/src/core/: __init__.py  categorizer.py  converter.py  scanner.py
bilibliToolkit/src/downloaders/: __init__.py  watchlater.py
bilibliToolkit/src/utils/: .env.example  __init__.py  config.py
remote2localToolkit/scpToolkit/: .env.example  README.md  pyproject.toml  scp_transfer.py
