[project]
name = "bilibili-toolkit"
version = "1.0.0"
description = "Bilibili video cache management and download toolkit with AI categorization"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "annotated-types>=0.7.0",
    "anyio>=4.10.0",
    "cachetools>=6.2.0",
    "certifi>=2025.8.3",
    "h11>=0.16.0",
    "httpcore>=1.0.9",
    "httpx>=0.28.1",
    "idna>=3.10",
    "pydantic>=2.11.7",
    "pydantic-core>=2.33.2",
    "pyjwt>=2.8.0",
    "sniffio>=1.3.1",
    "typing-extensions>=4.15.0",
    "typing-inspection>=0.4.1",
    "zhipuai>=2.1.5.20250825",
    "requests>=2.32.3",
    "yt-dlp>=2024.12.23",
]
authors = [
    { name = "Hongjun Li", email = "os.dev.hongjun@gmail.com" }
]
license = { text = "MIT" }
keywords = ["bilibili", "video", "download", "ai", "categorization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
bilibili-scan = "scripts.scan:main"
bilibili-categorize = "scripts.categorize:main"
bilibili-convert = "scripts.convert:main"
bilibili-download-watchlater = "scripts.download_watchlater:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
